--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -71,8 +71,8 @@
         <div class="container">
             <div class="row">
                 <div class="services-header">
-                    <h3 class="services-header-title">Our Mission</h3>
-                    <p class="services-header-body"><em> Things we provide in Office </em>  </p><hr>
+                    <h3 class="services-header-title">Whether learning to fly for a career, your business or even just for fun, you can achieve your aviation goals in our state of the art 2022 Cessna 172 Skyhawk!</h3>
+                    <p class="services-header-body"><em></em>  </p><hr>
                 </div>
             </div>
       
