--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -23,30 +23,30 @@
                     <div class="carousel-inner" role="listbox">
                         <!-- Begin Slide 1 -->
                         <div class="item active">
-                            <img src="../assets/img/slider/slide2.jpg" height="400" alt="Image of first carousel">
+                            <img src="../assets/img/slider/N9281A-1.jpg" height="400" alt="Image of Cessna 172">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs">Office BOOTSTRAP TEMPLATE</h3>
-                                <p class="carousel-body">RESPONSIVE \ MULTI PAGE</p>
+                                <h3 class="carousel-title hidden-xs">Cessna 172</h3>
+                                <p class="carousel-body">Cessna 172</p>
                             </div>
                         </div>
                         <!-- End Slide 1 -->
 
                         <!-- Begin Slide 2 -->
                         <div class="item">
-                            <img src="../assets/img/slider/slide4.jpg" height="400" alt="Image of second carousel">
+                            <img src="../assets/img/slider/disco_flight.png" height="400" alt="Image of discovery flight">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs">EASY TO CUSTOMIZE</h3>
-                                <p class="carousel-body">BEAUTIFUL \ CLEAN \ MINIMAL</p>
+                                <h3 class="carousel-title hidden-xs">Discovery Flights Available</h3>
+                                <p class="carousel-body">Call us today to scheudle!</p>
                             </div>
                         </div>
                         <!-- End Slide 2 -->
 
                         <!-- Begin Slide 3 -->
                         <div class="item">
-                            <img src="../assets/img/slider/slide2.jpg" height="400" alt="Image of third carousel">
+                            <img src="../assets/img/slider/N9281A-1.jpg" height="400" alt="Image of third carousel">
                             <div class="carousel-caption">
-                                <h3 class="carousel-title hidden-xs">MULTI-PURPOSE TEMPLATE</h3>
-                                <p class="carousel-body">PORTFOLIO \ CORPORATE \ CREATIVE</p>
+                                <h3 class="carousel-title hidden-xs">Cessna 172</h3>
+                                <p class="carousel-body">Cessna 172</p>
                             </div>
                         </div>
                         <!-- End Slide 3 -->
