--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
         <p><a href="/team"> Team ( Meet the Team )</a></p> 
       </div>
       <div class="col-md-4">
-        <h3><i class="fa fa-heart"></i> Socialize</h3>
+        <h3><i class="fa fa-heart"></i> Social</h3>
         <div id="social-icons">
           {% if site.googleplus_link %}
             <a href="{{ site.googleplus_link }}" class="btn-group google-plus">
