--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -23,7 +23,7 @@
                     <div class="carousel-inner" role="listbox">
                         <!-- Begin Slide 1 -->
                         <div class="item active">
-                            <img src="../assets/img/slider/N9281A-2.jpg" height="400" alt="Image of Cessna 172">
+                            <img src="../assets/img/slider/N9281A-2.png" height="400" alt="Image of Cessna 172">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">Cessna 172</h3>
                                 <p class="carousel-body">Cessna 172</p>
@@ -43,7 +43,7 @@
 
                         <!-- Begin Slide 3 -->
                         <div class="item">
-                            <img src="../assets/img/slider/N9281A-2.jpg" height="400" alt="Image of third carousel">
+                            <img src="../assets/img/slider/N9281A-2.png" height="400" alt="Image of third carousel">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">Cessna 172</h3>
                                 <p class="carousel-body">Cessna 172</p>
